--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
-  "name": "focal-point",
+  "name": "task-management-application",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "node --experimental-vm-modules ./node_modules/.bin/jest --runInBand test/unit",
+    "test:e2e": "node --experimental-vm-modules ./node_modules/.bin/jest --runInBand test/e2e",
+    "test:watch": "node --experimental-vm-modules ./node_modules/.bin/jest --runInBand --watchAll"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
+    "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.12"
+    "sass": "^1.79.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.12"
+    "eslint-config-next": "14.2.12",
+    "jest": "^29.7.0",
+    "prisma": "^5.19.1",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5"
   }
 }
